# guatemala

./: .gitignore  Guatemala.xlsx  README.md  budget.html  config.json  convert.py  further_work.md  index.html  itinerary.html  lodging.html  lodging.md  narrative_itinerary.html  pyproject.toml  serve.py  south_first_itinerary.html  south_first_itinerary.md
.github/workflows/: deploy.yml  main.yml
content/: index.html  lodging.md
src/: convert.py  serve.py
src/templates/: base.html
