[project]
name = "guatemala-travel"
version = "0.1.0"
description = "Guatemala travel website generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markdown",
    "pandas",
    "openpyxl"
]

[project.scripts]
serve = "serve:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["serve"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"