[project]
name = "guatemala-travel"
version = "0.1.0"
description = "Guatemala travel website generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markdown",
    "pandas",
    "openpyxl",
    "jinja2>=3.1.6",
]

[project.scripts]
serve = "src.serve:main"
convert = "src.convert:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["src.serve", "src.convert"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
